salesforce_assignment/AssignmentEmail/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <description>Email of loan applicant.</description>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <description>Name of loan applicant.</description>
        <label>Applicant Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMI Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <inlineHelpText>Email of manager who approved loan.</inlineHelpText>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Name of manager who approved loan.</description>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>